# rocketSync

./: .gitignore  README.md  config.json.default  license  main.py  pyproject.toml
src/: gdrive.py  utils.py
